added navbar function

--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
             padding: 1rem;
             text-align: center;
         }
+        nav {
+        background: #444;
+        padding: 0.5rem;
+        }
+        nav ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        gap: 1.5rem;
+        }
+        nav a {
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+        }
+        nav a:hover {
+        text-decoration: underline;
+        }
 
         main {
             margin: 2rem 0;
@@ -31,6 +51,14 @@
     <header>
         <h1>Welcome to My Website</h1>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
 
     <main>
         <h2>Hello World</h2>
