--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Pages/about.html">About</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
