--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starter Page</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -44,6 +47,21 @@
         main {
             margin: 2rem 0;
         }
+
+         .social-links {
+        margin-top: 1rem;
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
+        }
+        .social-links a {
+        color: white;
+        font-size: 1.5rem;
+        transition: color 0.3s;
+        }
+        .social-links a:hover {
+        color: #1da1f2; /* Twitter blue as hover */
+        }
     </style>
 </head>
 
@@ -67,6 +85,11 @@
 
     <footer>
         <p>&copy; 2025 My Website</p>
+        <div class="social-links">
+            <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
+        </div>
     </footer>
 </body>
 
